# wgpu_simplified

./: Cargo.toml
src/: lib.rs  texture_data.rs  wgpu_simplified.rs
