[package]
name = "wgpu_fundamentals"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.17.1"
cgmath = "0.18"
env_logger = "0.10"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
winit = "0.28" 
anyhow = "1.0"
bytemuck = { version = "1.13", features = ["derive"] }

[[example]]
name = "wgpu_info"
path = "examples/ch01/wgpu_info.rs"

[[example]]
name = "triangle_vertex_color"
path = "examples/ch02/triangle_vertex_color.rs"

[[example]]
name = "triangle_primitive"
path = "examples/ch02/triangle_primitive.rs"

[[example]]
name = "triangle_gpu_buffer"
path = "examples/ch02/triangle_gpu_buffer.rs"

[[example]]
name = "line_msaa"
path = "examples/ch02/line_msaa.rs"